--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/css/home_style.css">
     <meta name="description" content="Book Explorer: Week 7-8 Coding Challenge, Columbia Engineering Coding Bootcamp">
@@ -59,7 +60,7 @@
 
         <img
         id="bookPic" src="./assets/images/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
-            alt="an open vinatge book diplayed with pages fanned out"> 
+            alt="an open vintage book diplayed with pages fanned out"> 
         </img>
 
     </div>
