Some color changes:

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Jumbotron Markup -->
     <section class="hero" class="flex justify-center">
 
-        <h1 class="flex justify-center">Binary Beasts' Book Explorer</h1>
+        <h1 class="flex justify-center">Book Explorer</h1>
        
     </section>
 
