--- a/search.html
+++ b/search.html
@@ -50,7 +50,7 @@
         <!-- Book list area -->
         <div class="grid lg:col-span-5 md:col-span-3 sm:col-span-1">
             <!-- Title of bestseller list-->
-            <span id="title" class="ml-4 leading-none text-3xl underline decoration-double text-center"></span>
+            <span id="title" style="font-family: monospace" class="font-family-monospace ml-4 leading-none text-3xl underline decoration-double text-center"></span>
             <!-- Books on bestseller list -->
             <div id="books" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 h-48">
 
