fixed media flex

--- a/contacts.html
+++ b/contacts.html
@@ -34,8 +34,8 @@
 	</header>
 
 	<!-- Team List -->
-	<section>
-		<div class="container mx-auto columns-1 md:columns-2 flex justify-center items-center justify-around">
+	<section class="">
+		<div class="container mx-auto flex justify-center items-center justify-around flex-col lg:flex-none">
 			<!--container for each of us-->
 			<div class="space-y-4">
 				<div id="card-1"
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 
-			<div class="space-y-4 object-center">
+			<div class="space-y-4 object-center mt-4">
 				<div id="card-3"
 					class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/DamarisCanales" class="mb-1 ml-1 mt-1"><img
