--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
     <!-- Main page -->
     <div class="grid lg:grid-cols-6 md:grid-cols-4 sm:grid-cols-1 ml-2">
         <!-- Search form -->
-        <form class="bg-gray-400 rounded-lg">
+        <form class="bg-[#5d49104a] rounded-lg">
             <div class="mb-6 p-2">
                 <label for="date" class="block ml-2 mb-2 text-sm font-medium text-gray-900">Date:</label>
                 <input type="date" id="date"
@@ -43,14 +43,14 @@
             </div>
             <div class="mb-6 ml-4 p-2">
                 <button type="submit" id="searchButton"
-                    class="m-2 float-right text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Submit</button>
+                    class="m-2 float-right text-white bg-[#3f47165e] hover:bg-[#5d4910b1] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Submit</button>
             </div>
         </form>
 
         <!-- Book list area -->
         <div class="grid lg:col-span-5 md:col-span-3 sm:col-span-1">
             <!-- Title of bestseller list-->
-            <span id="title" style="font-family: monospace" class="font-family-monospace ml-4 leading-none text-3xl underline decoration-double text-center"></span>
+            <span id="title" style="font-family: monospace" class="font-family-monospace ml-4 leading-none text-3xl underline decoration-single text-center"></span>
             <!-- Books on bestseller list -->
             <div id="books" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 h-48">
 
