Fixed viewer canvas height for mobile

--- a/book.html
+++ b/book.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <!-- Google Books preview, if available -->
-        <div id="viewerCanvas" class="clear-both w-full lg:h-screen sm:h-full">
+        <div id="viewerCanvas" class="clear-both w-full h-[36rem]">
         </div>
     </div>
 
