--- a/contacts.html
+++ b/contacts.html
@@ -39,42 +39,42 @@
 			<!--container for each of us-->
 			<div class="space-y-4">
 				<div id="card-1"
-					class="box-border h-20 w-64 border-4 border-indigo-500/50 hover:border-indigo-500/100 flex flex-col flex-wrap rounded place-content-center">
+					class="box-border h-20 w-64 border-4 border-indigo-500/50 hover:border-indigo-500/100 flex flex-col flex-wrap rounded place-content-center bg-[#5d49104a]">
 					<!--GitHub icon that links to our webpage-->
-					<a href="https://github.com/chrispobrien/" class="mb-1 mt-1 self-center"><img
+					<a href="https://github.com/chrispobrien/" class="mb-1 mt-1 self-center animate-pulse hover:scale-150"><img
 							src="./assets/images/github-icon.svg" alt="Image of Chris's GitHub page" /></a>
-					<a id="portfolio" class="self-center"
+					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125"
 						href="https://chrispobrien.github.io/02-Advanced-CSS-Portfolio/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center"
+					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center hover:scale-125"
 						href="mailto:chris.obrien57@gmail.com">Chris O'brien</a>
 				</div>
 
 				<div id="card-2"
-					class="box-border h-20 w-64 border-4 border-blue-500/50 hover:border-blue-500/100 flex flex-col flex-wrap rounded place-content-center">
-					<a href="https://github.com/Coding291" class="mb-1 mt-1 self-center"><img
+					class="box-border h-20 w-64 border-4 border-blue-500/50 hover:border-blue-500/100 flex flex-col flex-wrap rounded place-content-center bg-[#5d49104a]">
+					<a href="https://github.com/Coding291" class="mb-1 mt-1 self-center animate-pulse hover:scale-150"><img
 							src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
-					<a id="portfolio" class="self-center" href="https://coding291.github.io/Week2--Homework/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center"
+					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125" href="https://coding291.github.io/Week2--Homework/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center hover:scale-125"
 						href="mailto:azam.muhammad2002@gmail.com">Muhammad Azam</a>
 				</div>
 			</div>
 
 			<div class="space-y-4 object-center mt-4">
 				<div id="card-3"
-					class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap rounded place-content-center">
-					<a href="https://github.com/DamarisCanales" class="mb-1 mt-1 self-center"><img
+					class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap rounded place-content-center bg-[#5d49104a]">
+					<a href="https://github.com/DamarisCanales" class="mb-1 mt-1 self-center animate-pulse hover:scale-150"><img
 							src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
-					<a id="portfolio" class="self-center" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center"
+					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center hover:scale-125"
 						href="mailto:damariscanales@gmail.com">Damaris Canales</a>
 				</div>
 
 				<div id="card-4"
-					class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap rounded place-content-center">
-					<a href="https://github.com/Andrewplee" class="mb-1 mt-1 self-center"><img
+					class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap rounded place-content-center bg-[#5d49104a]">
+					<a href="https://github.com/Andrewplee" class="mb-1 mt-1 self-center animate-pulse hover:scale-150"><img
 							src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
-					<a id="portfolio" class="self-center" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center"
+					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center hover:scale-125"
 						href="mailto:alee68@fordam.edu">Andrew Lee</a>
 				</div>
 			</div>
