updated portfolio link (Andrew)

--- a/contacts.html
+++ b/contacts.html
@@ -73,7 +73,7 @@
 					class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap rounded place-content-center bg-[#5d49104a]">
 					<a href="https://github.com/Andrewplee" class="mb-1 mt-1 self-center animate-pulse hover:scale-150"><img
 							src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
-					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
+					<a id="portfolio" class="self-center text-slate-600/50 hover:text-black hover:scale-125" href="https://yahplee.github.io/portfolio/">Portfolio</a>
 					<a id="contact-info" class="text-slate-600/50 hover:text-black self-center hover:scale-125"
 						href="mailto:alee68@fordam.edu">Andrew Lee</a>
 				</div>
