Fixed buttons to trigger on the button instead of the text

--- a/book.html
+++ b/book.html
@@ -17,17 +17,13 @@
 <body class="bg-white text-slate-800">
     <header>
         <nav>
-            <ul>
-                <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
-                    <!--create onclick with JS if you want @Muhammad-->
-                    <button class="button" role="button"><input type=button class='cursor-pointer'
-                            onClick="window.location = 'index.html'" value='HOME'></input></button>
-                    <button class="button" role="button"><input type=button class='cursor-pointer'
-                            onClick="window.location = 'search.html'" value='BOOKS'></input></button>
-                    <button class="button" role="button"><input type=button class='cursor-pointer'
-                            onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
-                </div>
-            </ul>
+			<ul>
+				<div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
+					<button class="button cursor-pointer" onClick="window.location = 'index.html'" role="button"><input type=button value='HOME'></input></button>
+					<button class="button cursor-pointer" onClick="window.location = 'search.html'" role="button"><input type=button value='BOOKS'></input></button>
+					<button class="button cursor-pointer" onClick="window.location = 'contacts.html'" role="button"><input type=button value='TEAM'></input></button>
+				</div>
+			</ul>
         </nav>
     </header>
 
