--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                  <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
 
                     <li>
-                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'index.html'" value='HOME'></input></button>
+                        <button class="button cursor-pointer" onClick="window.location = 'index.html'" role="button"><input type=button value='HOME'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'" value='BOOKS'></input></button>
+                        <button class="button cursor-pointer" onClick="window.location = 'search.html'" role="button"><input type=button value='BOOKS'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
+                        <button class="button cursor-pointer" onClick="window.location = 'contacts.html'" role="button"><input type=button value='TEAM'></input></button>
                     </li>
 
                </div>
